unpackaged/main/default/objects/test__c/test__c.object-meta.xml
<CustomObject>
    <label>test</label>
    <nameField>
        <label>test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>