unpackaged/main/default/objects/test__c/fields/aaaaaaaaaaaaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaaaaaaaaaaaa__c</fullName>
    <label>aaaaaaaaaaaaaaa</label>
    <type>AutoNumber</type>
</CustomField>