unpackaged/main/default/objects/test__c/fields/abgte__c.field-meta.xml
<CustomField>
    <fullName>abgte__c</fullName>
    <label>abgte</label>
    <type>AutoNumber</type>
</CustomField>