unpackaged/main/default/objects/test__c/fields/new__c.field-meta.xml
<CustomField>
    <fullName>new__c</fullName>
    <label>new</label>
    <type>AutoNumber</type>
</CustomField>