unpackaged/main/default/objects/test__c/fields/round600__c.field-meta.xml
<CustomField>
    <fullName>round600__c</fullName>
    <label>round600</label>
    <type>AutoNumber</type>
</CustomField>