unpackaged/main/default/objects/test__c/fields/soupa__c.field-meta.xml
<CustomField>
    <fullName>soupa__c</fullName>
    <label>soupa</label>
    <type>AutoNumber</type>
</CustomField>