unpackaged/main/default/objects/test__c/fields/stripe__c.field-meta.xml
<CustomField>
    <fullName>stripe__c</fullName>
    <label>stripe</label>
    <type>AutoNumber</type>
</CustomField>