unpackaged/main/default/objects/test__c/recordTypes/aa.recordType-meta.xml
<RecordType>
    <fullName>aa</fullName>
    <active>true</active>
    <label>aa</label>
</RecordType>